[imad-console] Updates a1.html

--- a/a1.html
+++ b/a1.html
@@ -1,2 +1,14 @@
 <html>
+    <head><title>a1-shash</title></head>
+    <body>
+        <div>
+            <a href="/">home</a>
+        </div>
+        <hr/>
+        <p><h1>this is first page</h1></p>
+        <hr/>
+        
+        <p>Protocol: It defines the mode/rules of communication between the client and server for the request.
+</p>
+    </body>
 </html>
