--- a/a1.html
+++ b/a1.html
@@ -1,5 +1,6 @@
 <html>
-    <head><title>a1-shash</title></head>
+    <head><title>a1-shash</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/></head>
     <body>
         <div>
             <a href="/">home</a>
