[imad-console] Updates a1.html

--- a/a1.html
+++ b/a1.html
@@ -1,7 +1,14 @@
 <html>
     <head><title>a1-shash</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/></head>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <style>
+    .con{
+        color: violet;
+    }
+        
+    </style></head>
     <body>
+<div class="con">       
         <div>
             <a href="/">home</a>
         </div>
@@ -11,5 +18,6 @@
         
         <p>Protocol: It defines the mode/rules of communication between the client and server for the request.
 </p>
+</div>
     </body>
 </html>
