--- a/a1.html
+++ b/a1.html
@@ -4,6 +4,9 @@
     <style>
     .con{
         color: violet;
+        padding-top: 60px;
+        padding-right: 20px;
+
     }
         
     </style></head>
