[imad-console] Updates a2.html

--- a/a2.html
+++ b/a2.html
@@ -1,7 +1,18 @@
 <html>
     <head><title>a2-shash</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/></head>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+      <style>
+    .con1{
+        color: violet;
+        padding-top: 60px;
+        padding-right: 20px;
+
+    }
+        
+    </style>
+    </head>
     <body>
+        <div class="con1">
         <div>
             <a href="/">home</a>
         </div>
@@ -11,5 +22,6 @@
         
         <p>Hostname: It identifies the server which will serve the request. It may contain the domain name. In this case “flipkart.com”
 </p>
+</div>
     </body>
 </html>
