--- a/a3.html
+++ b/a3.html
@@ -1,7 +1,17 @@
 <html>
     <head><title>a3-shash</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/></head>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+      <style>
+    .con2{
+        color: green;
+        padding-top: 60px;
+        padding-right: 20px;
+
+    }
+        
+    </style></head>
     <body>
+        <div class="con2">
         <div>
             <a href="/">home</a>
         </div>
@@ -11,5 +21,6 @@
         
         <p>Path: It defines the resource which is being requested. It typically points to a webpage.
 </p>
+</div>
     </body>
 </html>
