[imad-console] Updates a2.html

--- a/a2.html
+++ b/a2.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
       <style>
     .con1{
-        color: violet;
+        color: blue;
         padding-top: 60px;
         padding-right: 20px;
 
